# tum_ardrone

./: .gitignore  CMakeLists.txt  Makefile  README.md  ardrone_driver.launch  mainpage.dox  manifest.xml  package.xml  readme.txt  readme_autopilot.txt  readme_gui.txt  readme_stateestimation.txt  readme_tricks.txt
action/: Init.action  Move.action
camcalib/: ardrone1_default.txt  ardrone2_default.txt
cfg/: AutopilotParams.cfg  GUIParams.cfg  StateestimationParams.cfg
flightPlans/: NikolausHorizontal.txt  NikolausVertical.txt  autoInitAndLand.txt  autoInitOnly.txt  initDemo.txt  ocatgon.txt  sorroundView.txt  square1x1.txt  square3x3.txt  xyz.txt
launch/: ardrone_driver.launch  tum_ardrone.launch
msg/: filter_state.msg
src/: HelperFunctions.h
src/UINode/: PingThread.cpp  PingThread.h  RosThread.cpp  RosThread.h  aruco_mapping.cpp  aruco_mapping.h  main_GUI.cpp  tum_ardrone_gui.cpp  tum_ardrone_gui.h  tum_ardrone_gui.pro  tum_ardrone_gui.ui
src/autopilot/: ControlNode.cpp  ControlNode.h  DroneController.cpp  DroneController.h  main_autopilot.cpp
src/autopilot/KI/: KIAutoInit.cpp  KIAutoInit.h  KIFlyTo.cpp  KIFlyTo.h  KILand.cpp  KILand.h  KIProcedure.h
src/stateestimation/: DroneKalmanFilter.cpp  DroneKalmanFilter.h  EstimationNode.cpp  EstimationNode.cpp~  EstimationNode.h  EstimationNode.h~  GLWindow2.cc  GLWindow2.h  GLWindowMenu.cc  MapView.cpp  MapView.h  MouseKeyHandler.h  PTAMWrapper.cpp  PTAMWrapper.h  Predictor.cpp  Predictor.h  main_stateestimation.cpp  main_stateestimation.cpp~
src/stateestimation/PTAM/: ATANCamera.cc  ATANCamera.h  Bundle.cc  HomographyInit.cc  KeyFrame.cc  MapMaker.cc  MapMaker.h  MapPoint.cc  MiniPatch.cc  Tracker.cc  Tracker.h  customFixes.h  settingsCustom.h
srv/: SetInitialReachDistance.srv  SetMaxControl.srv  SetReference.srv  SetStayTime.srv  SetStayWithinDistance.srv
